--- a/templates/expenses_page.html
+++ b/templates/expenses_page.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/css/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -13,7 +14,7 @@
         {% for expense in expenses %}   
         
     
-        <div id = "expense">{{expense.name}} {{expense.number}} {{expense.date_field}}</div>
+        <div class= "expense">{{expense.name}} {{expense.number}} {{expense.date_field}}</div>
         
         {% endfor %}
    </div>
