added expense form to view.py and rendered it in template

--- a/templates/add_expenses.html
+++ b/templates/add_expenses.html
@@ -8,5 +8,14 @@
 </head>
 <body>
     <h1>add expense</h1>
+
+    <form  method= "POST" action = "">
+        {% csrf_token %}
+        {{form}}
+
+        <button type="submit">Submit an expense</button>
+
+    </form>
+    =
 </body>
 </html>
