--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,16 +4,18 @@ body {
 
 .container {
 
+    text-align: center;
     display: flex;
     flex-wrap: wrap;
     border: solid 2px black;
 }
 
 .expense {
+    text-align: center;
     justify-content: space-around;
     background-color: aquamarine;
     width: 15%;
-    height: 100px;
+    height: fit-content;
     background-color: #ccc;
     margin: 5px;
     
