--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -7,6 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>home page</h1>
+    <header id = "home">
+
+        <br>
+        <h1 id = "main">Athlone Gym <i class="fa-solid fa-dumbbell"></i> </h1>
+        <nav>
+            <ul id ="menu">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#classes-section1">Classes</a></li>
+                <li><a href ="#sign-up-section">Sign up</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>   
+        </nav>
+    </header>
 </body>
 </html>
