--- a/templates/expenses_page.html
+++ b/templates/expenses_page.html
@@ -8,6 +8,18 @@
     <title>Document</title>
 </head>
 <body>
+    <header id = "home">
+
+        <h1 id = "main">Expense Tracker</h1>
+        <nav>
+            <ul id ="menu">
+                <li><a href="">Home</a></li>
+                <li><a href= "" >Expenses</a></li>
+                <li><a >Login</a></li>
+                <li><a >Register</a></li>
+            </ul>   
+        </nav>
+    </header>
     <h1>expenses page</h1>
 
     <div class = "container">
@@ -17,7 +29,7 @@
         <div class= "expense">
             <h2>{{expense.name}}</h2>
             
-            <p>{{expense.number}}</p>
+            <p>$  {{expense.number}}</p>
             
             <p>{{expense.date_field}}</p>
             
