--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -5,20 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
     <header id = "home">
 
-        <br>
-        <h1 id = "main">Athlone Gym <i class="fa-solid fa-dumbbell"></i> </h1>
+        <h1 id = "main">Expense Tracker</h1>
         <nav>
             <ul id ="menu">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#classes-section1">Classes</a></li>
-                <li><a href ="#sign-up-section">Sign up</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="">Home</a></li>
+                <li><a href= "expenses/">Expenses</a></li>
+                <li><a >Login</a></li>
+                <li><a >Register</a></li>
             </ul>   
         </nav>
     </header>
+    
+    <div>
+        <div></div>
+        <div></div>
+    </div>
+    <footer></footer>
 </body>
 </html>
