added edit item button and can select individual expenese to edit

--- a/templates/expenses_page.html
+++ b/templates/expenses_page.html
@@ -33,11 +33,15 @@
            
             
             <p>{{expense.date_field}}</p>
+            <a href = "/update/{{ expense.id }}">Edit Expense</a>
+            <a href = "/delete/{{ expense.id }}">Edit Expense</a>
             
             </div>
         
         {% endfor %}
    </div>
+   <a href = "/update/{{expense.id}}">Edit this item</a>
+   <a href = "/delete/{{expense.id}}">Delete this item</a>
 
     
 </body>
