added delete view function

--- a/templates/expenses_page.html
+++ b/templates/expenses_page.html
@@ -34,7 +34,7 @@
             
             <p>{{expense.date_field}}</p>
             <a href = "/update/{{ expense.id }}">Edit Expense</a>
-            <a href = "/delete/{{ expense.id }}">Edit Expense</a>
+            <a href = "/delete/{{ expense.id }}">Delete Expense</a>
             
             </div>
         
