added basic styling to add expense form

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -14,7 +14,7 @@
         <nav>
             <ul id ="menu">
                 <li><a href="">Home</a></li>
-                <li><a href= "expenses/">Expenses</a></li>
+                <li><a href= "">Expenses</a></li>
                 <li><a >Login</a></li>
                 <li><a >Register</a></li>
             </ul>   
