--- a/static/css/style.css
+++ b/static/css/style.css
@@ -62,3 +62,9 @@ body {
     background-color:#6EF9F5;
    
 }
+#add_form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: solid 1px black;
+}
