--- a/templates/add_expenses.html
+++ b/templates/add_expenses.html
@@ -5,17 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
+    <header id = "home">
+
+        <h1 id = "main">Expense Tracker</h1>
+        <nav>
+            <ul id ="menu">
+                <li><a href="">Home</a></li>
+                <li><a href= "" >Expenses</a></li>
+                <li><a >Login</a></li>
+                <li><a >Register</a></li>
+            </ul>   
+        </nav>
+    </header>
     <h1>add expense</h1>
 
-    <form  method= "POST" action = "">
-        {% csrf_token %}
-        {{form}}
+    <div id = "add_form_container">
 
-        <button type="submit">Submit an expense</button>
+        <form  id = "add_form" method= "POST" action = "">
+            {% csrf_token %}
+            {{form}}
+            <button type="submit">Submit Expense</button>
 
-    </form>
-    =
+        </form>
+    </div>
+    
 </body>
 </html>
