--- a/templates/expenses_page.html
+++ b/templates/expenses_page.html
@@ -13,14 +13,15 @@
         <h1 id = "main">Expense Tracker</h1>
         <nav>
             <ul id ="menu">
-                <li><a href="">Home</a></li>
-                <li><a href= "" >Expenses</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href= "/expenses/" >Expenses</a></li>
                 <li><a >Login</a></li>
                 <li><a >Register</a></li>
             </ul>   
         </nav>
     </header>
     <h1>expenses page</h1>
+    <a href="/add/">Add a new expense</a>
 
     <div class = "container">
         {% for expense in expenses %}   
