--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -13,8 +13,8 @@
         <h1 id = "main">Expense Tracker</h1>
         <nav>
             <ul id ="menu">
-                <li><a href="">Home</a></li>
-                <li><a href= "">Expenses</a></li>
+                <li><a href="//">Home</a></li>
+                <li><a href= "/expenses/">Expenses</a></li>
                 <li><a >Login</a></li>
                 <li><a >Register</a></li>
             </ul>   
