--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -13,10 +13,13 @@
         <h1 id = "main">Expense Tracker</h1>
         <nav>
             <ul id ="menu">
-                <li><a href="//">Home</a></li>
-                <li><a href= "/expenses/">Expenses</a></li>
-                <li><a >Login</a></li>
-                <li><a >Register</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href= "/expenses/" >Expenses</a></li>
+                <li><a href="/accounts/signup/">Register</a></li>
+                <li><a href="/accounts/login/" >Login</a></li>
+                {% if user.is_authenticated %} 
+                <li><a href="/accounts/logout/" >Logout</a></li>
+                {% endif %}
             </ul>   
         </nav>
     </header>
