--- a/templates/add_expenses.html
+++ b/templates/add_expenses.html
@@ -19,7 +19,7 @@
                 <li><a href="/accounts/login/" >Login</a></li>
                 {% if user.is_authenticated %} 
                 <li><a href="/accounts/logout/" >Logout</a></li>
-                {% endif}
+                {% endif %}
             </ul>   
         </nav>
     </header>
