add template variable to calculate total expenses

--- a/templates/expenses_page.html
+++ b/templates/expenses_page.html
@@ -46,6 +46,11 @@
    </div>
    <footer>
     <div class="contact">
+        {% for expense in expenses %}
+
+        {% endfor %}
+        {{ numbers1 }}
+        
 
     </div>
 </footer>
