--- a/templates/expenses_page.html
+++ b/templates/expenses_page.html
@@ -24,6 +24,20 @@
         </nav>
     </header>
     <h1>expenses page</h1>
+
+    <div id = "total_container">
+        <div id= "budget">
+            <h1>Budget</h1>
+            <h1> $ </h1>
+
+        </div>
+        <div id= "total">
+            <h1>Total Expenses</h1>
+            <h1> $ {{total}}</h1>
+
+        </div>
+
+    </div>
     <a href="/add/">Add a new expense</a>
 
     <div class = "container">
@@ -46,10 +60,8 @@
    </div>
    <footer>
     <div class="contact">
-        {% for expense in expenses %}
-
-        {% endfor %}
-        {{ numbers1 }}
+       
+      
         
 
     </div>
