--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -5,11 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block head_title %}{% endblock %}</title>
+    <link rel="stylesheet" href="/static/css/style.css">
     {% block extra_head %}
+
     {% endblock %}
   </head>
   <body>
     {% block body %}
+    <header id = "home">
+
+      <h1 id = "main">Expense Tracker</h1>
+      <nav>
+          <ul id ="menu">
+              <li><a href="/">Home</a></li>
+              <li><a href= "/expenses/" >Expenses</a></li>
+              <li><a href="/accounts/signup/">Register</a></li>
+              <li><a href="/accounts/login/" >Login</a></li>
+              {% if user.is_authenticated %} 
+              <li><a href="/accounts/logout/" >Logout</a></li>
+              {% endif %}
+          </ul>   
+      </nav>
+  </header>
 
     {% if messages %}
     <div>
