--- a/templates/expenses_page.html
+++ b/templates/expenses_page.html
@@ -25,10 +25,15 @@
     </header>
     <h1>expenses page</h1>
 
-    <div id = "total_container">
+    <div id = "money_container">
         <div id= "budget">
             <h1>Budget</h1>
-            <h1> $ </h1>
+            <h1> $ {{budget_total}} </h1>
+
+        </div>
+        <div id= "leftover">
+            <h1>Current</h1>
+            <h1> $ {{leftover}}</h1>
 
         </div>
         <div id= "total">
