--- a/static/css/style.css
+++ b/static/css/style.css
@@ -127,3 +127,17 @@ display:flex;
     border: solid 1px black;
 
 }
+.social_media {
+    text-align: center;
+}
+
+.social_media > li {
+    display: inline;
+}
+
+.social_media i {
+    font-size: 200%;
+    margin: 1%;
+    padding: 5%;
+    color:antiquewhite
+}
