--- a/templates/expenses_page.html
+++ b/templates/expenses_page.html
@@ -26,6 +26,16 @@
     <h1>expenses page</h1>
     
 
+    {% if messages %}
+        <ul class="messages">
+        {% for message in messages %}
+        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+       </ul>
+    {% endif %}
+
+    
+
 
     <div id = "money_container">
         <div id= "budget">
