--- a/templates/expenses_page.html
+++ b/templates/expenses_page.html
@@ -76,12 +76,22 @@
         {% endfor %}
    </div>
    <footer>
-    <div class="contact">
-       
-      
-        
-
-    </div>
+    <footer>
+        <ul class="social_media">
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener"><i class="fab fa-twitter-square"></i></a>
+            </li>
+            <li>
+                <a href="https://youtube.com" target="_blank" rel="noopener"><i class="fab fa-youtube-square"></i></a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+            </li>
+        </ul>
+    </footer>
 </footer>
 
 
