--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,7 +5,8 @@
 }
 
 body {
-    background-color: #011C27
+    background-color: whitesmoke;
+
 }
 .container {
 
@@ -27,7 +28,8 @@ body {
 }
 
 #home {
-    background-color: #5ABCB9;
+   
+    
    
 }
 #home h1 { 
@@ -93,13 +95,13 @@ display:flex;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+    flex-direction: row;
 
 }
 #total {
     height:100px;
     width: 30%;
-    background-color: lightcoral;
+    color:red;
     text-align: center;
 
 
@@ -107,14 +109,14 @@ display:flex;
 #budget {
     height: 100px;
     width: 30%;
-    background-color: lightgreen;
+    color: rgb(4, 227, 4);
     text-align: center;
 }
 
 #leftover {
     height: 100px;
     width: 30%;
-    background-color: lightgoldenrodyellow;
+    color: yellow;
     text-align: center;
 
 }
