--- a/templates/expenses_page.html
+++ b/templates/expenses_page.html
@@ -8,6 +8,9 @@
     <title>Document</title>
 </head>
 <body>
+    <div id = "type">
+        <h1 id = "rrrr">helllllllllllllll</h1>
+    </div>
     <header id = "home">
 
         <h1 id = "main">Expense Tracker</h1>
@@ -36,44 +39,44 @@
     {% if not user.is_authenticated %}  
 
     <div id = "placeholder_money_container">
-        <div id= "placeholder_budget">
-            <h1>Initial Budget</h1>
-            <h2> $  </h2>
+        <div class="typewiter" id= "placeholder_budget">
+            <h1 >Initial Budget</h1>
+            <h2 class="type" > $  </h2>
 
         </div>
        
-        <div id= "placeholder_total">
+        <div class="typewiter" id= "placeholder_total">
             <h1>Total Expenses</h1>
-            <h2> $ </h2>
+            <h2 class="type" > $ </h2>
 
         </div>
-        <div id= "placeholder_leftover">
+        <div class="typewiter"  id= "placeholder_leftover">
             <h1>Current Budget</h1>
-            <h2> $ </h2>
+            <h2 class="type" > $ </h2>
 
         </div>
 
     </div>
     {% endif %}
-
+  
     
     {% if user.is_authenticated %}  
 
     <div id = "money_container">
-        <div id= "budget">
-            <h1>Initial Budget</h1>
-            <h2> $  {{budget_total}} </h2>
+        <div class="typewiter"  id= "budget">
+            <h1 >Initial Budget</h1>
+            <h2 class="type" > $  {{budget_total}} </h2>
 
         </div>
        
-        <div id= "total">
+        <div class="typewiter"  id= "total">
             <h1>Total Expenses</h1>
-            <h2> $ {{total}}</h2>
+            <h2 class="type" > $ {{total}}</h2>
 
         </div>
-        <div id= "leftover">
+        <div class="typewiter" id= "leftover">
             <h1>Current Budget</h1>
-            <h2> $ {{leftover}}</h2>
+            <h2 class="type" > $ {{leftover}}</h2>
 
         </div>
 
