--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Merienda+One|Open+Sans&display=swap');
+
 * {
     margin:0;
     padding:0;
@@ -5,6 +7,7 @@
 }
 
 body {
+    font-family: 'Open Sans', Arial, sans-serif;
     background-color: whitesmoke;
 
 }
