--- a/static/css/style.css
+++ b/static/css/style.css
@@ -86,11 +86,16 @@ body {
     background-color:#6EF9F5;
    
 }
-#add_form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border: solid 1px black;
+.add_form_container {
+    display: flex;
+}
+.add_form {
+    
+    display: flex;
+  
+    flex-direction: column;
+    align-items: center;
+    border: solid 1px black;
 }
 
 #about_container {
