--- a/templates/expenses_page.html
+++ b/templates/expenses_page.html
@@ -142,6 +142,7 @@
         </ul>
     </footer>
     <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
+    <script src = "/static/js"></script>
 
 
 
