--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -18,16 +18,20 @@
 
       <h1 id = "main">Expense Tracker</h1>
       <nav>
-          <ul id ="menu">
-              <li><a href="/">Home</a></li>
-              <li><a href= "/expenses/" >Expenses</a></li>
-              <li><a href="/accounts/signup/">Register</a></li>
-              <li><a href="/accounts/login/" >Login</a></li>
-              {% if user.is_authenticated %} 
-              <li><a href="/accounts/logout/" >Logout</a></li>
-              {% endif %}
-          </ul>   
-      </nav>
+        <ul id ="menu">
+            <li><a href="/">Home</a></li>
+            <li><a href= "/expenses/" >Expenses</a></li>
+            {% if not user.is_authenticated %} 
+            <li><a href="/accounts/signup/">Register</a></li>
+            {% endif %}
+            {% if not user.is_authenticated %}
+            <li><a href="/accounts/login/" >Login</a></li>
+            {% endif %}
+            {% if user.is_authenticated %} 
+            <li><a href="/accounts/logout/" >Logout</a></li>
+            {% endif %}
+        </ul>   
+    </nav>
   </header>
 
     {% if messages %}
