--- a/templates/expenses_page.html
+++ b/templates/expenses_page.html
@@ -18,8 +18,12 @@
             <ul id ="menu">
                 <li><a href="/">Home</a></li>
                 <li><a href= "/expenses/" >Expenses</a></li>
+                {% if not user.is_authenticated %} 
                 <li><a href="/accounts/signup/">Register</a></li>
+                {% endif %}
+                {% if not user.is_authenticated %}
                 <li><a href="/accounts/login/" >Login</a></li>
+                {% endif %}
                 {% if user.is_authenticated %} 
                 <li><a href="/accounts/logout/" >Logout</a></li>
                 {% endif %}
