--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -30,9 +30,10 @@
     
     <div id = "about_container">
         <div id="text_box">
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            <p>The expense tracker app is a handy tool for keeping track of your expenses. With this app, you can easily add expenses and keep track of your spending. You can also set an initial budget and the app will automatically deduct your expenses from your budget, giving you an up-to-date picture of your spending. This feature helps you to stay within your budget and avoid overspending. Overall, the expense tracker app is a simple, yet powerful tool that can help you manage your finances more effectively.</p>
         </div>
         <div id ="image_container">
+            <img src = "/static/css/money.jpg" alt="money">
 
         </div>
     </div>
