--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,24 +16,35 @@ body {
     text-align: center;
     display: flex;
     flex-wrap: wrap;
-    border: solid 1px black;
+   
 }
 
 .expense {
     text-align: center;
     justify-content: space-between;
+  
     background-color: aquamarine;
     width: 16%;
     height: 200px;
     background-color: #ccc;
     margin: 5px;
+   
+    border-radius: 25px;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    
+}
+
+
+#expense_div:hover {
+    box-shadow: 0 3px 10px purple;
     
 }
 .placeholder_container {
     text-align: center;
     display: flex;
     flex-wrap: wrap;
-    border: solid 1px black;
+
+   
 
 
 }
@@ -46,9 +57,23 @@ body {
     height: 200px;
     background-color: #ccc;
     margin: 5px;
+    border-radius: 25px;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    
+   
 
 }
+.placeholder_expense:hover {
+    box-shadow: 0 3px 10px purple;
+    
+}
 
+
+.shadow {
+    
+    box-shadow: inset 0 0 10px #000000;
+   
+}
 
 #home {
    
@@ -103,16 +128,21 @@ display:flex;
 }
 #text_box {
     width:50%;
-    background-color: #011C27;
+    font-family: cursive;
+    
     padding:5%;
-    color: white;
+    color: black;
 
 }
 #image_container {
-    width:50%;
-    background-color: yellowgreen;
+   
+  
+  
     padding: 5%;
 
+}
+#image_container img {
+    width:80%;
 }
 .contact {
     background-color: #5ABCB9;
@@ -121,7 +151,7 @@ display:flex;
 }
 #money_container {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     flex-direction: row;
 
@@ -130,6 +160,7 @@ display:flex;
     height:100px;
     width: 30%;
     color:red;
+    background-color: darkgray;
     text-align: center;
 
 
@@ -138,13 +169,15 @@ display:flex;
     height: 100px;
     width: 30%;
     color: rgb(4, 227, 4);
+    background-color: darkgray;
     text-align: center;
 }
 
 #leftover {
     height: 100px;
     width: 30%;
-    color: yellow;
+    color: plum;
+    background-color: darkgray;
     text-align: center;
 
 }
@@ -159,6 +192,7 @@ display:flex;
     height:100px;
     width: 30%;
     color:red;
+    background-color: darkgray;
     text-align: center;
 
 
@@ -167,6 +201,7 @@ display:flex;
     height: 100px;
     width: 30%;
     color: rgb(4, 227, 4);
+    background-color: darkgray;
     text-align: center;
 }
 
@@ -174,6 +209,7 @@ display:flex;
     height: 100px;
     width: 30%;
     color: yellow;
+    background-color: darkgray;
     text-align: center;
 
 }
@@ -201,7 +237,7 @@ display:flex;
     font-size: 200%;
     margin: 1%;
     padding: 5%;
-    color:antiquewhite
+    color:black;
 }
 
 #messages li{
@@ -221,7 +257,7 @@ display:flex;
 }
 .type{
     overflow: hidden;
-    border-right: .15em solid rgb(3, 3, 3);
+   
     white-space: nowrap;
     font-size: 1.6rem;
    
