--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -30,13 +30,30 @@
     
     <div id = "about_container">
         <div id="text_box">
+            <h1>About</h2>
+            
             <p>The expense tracker app is a handy tool for keeping track of your expenses. With this app, you can easily add expenses and keep track of your spending. You can also set an initial budget and the app will automatically deduct your expenses from your budget, giving you an up-to-date picture of your spending. This feature helps you to stay within your budget and avoid overspending. Overall, the expense tracker app is a simple, yet powerful tool that can help you manage your finances more effectively.</p>
+            <h2>Lets begin your expense journey</h2>
+            <ul id ="start">
+            {% if user.is_authenticated %} 
+                <li><a class="start_buttons" href= "/expenses/" >Start Tracking</a></li>
+            {% endif %}
+            {% if not user.is_authenticated %} 
+                <li><a class="start_buttons" href="/accounts/signup/">Register</a></li>
+            {% endif %}
+            {% if not user.is_authenticated %}
+                <li><a class="start_buttons" href="/accounts/login/" >Login</a></li>
+            {% endif %}
+                  
+            </ul>    
         </div>
         <div id ="image_container">
             <img src = "/static/css/money.jpg" alt="money">
 
         </div>
     </div>
+
+    
    
   
     <footer>
