--- a/static/css/style.css
+++ b/static/css/style.css
@@ -72,8 +72,6 @@ body {
     display: flex;
     flex-wrap: wrap;
 
-   
-
 
 }
 
@@ -128,6 +126,38 @@ body {
     padding-left:15px;
     display:inline;  
    
+}
+
+#btn_add{
+    margin-top: 5%;
+    display: inline-block;
+    padding: 10px 20px;
+    text-decoration: none;
+    text-align: center;
+    width:20%;
+    background-color: #0077cc;
+   
+    color: #fff;
+    border-radius: 5px;
+    box-shadow: 0px 2px 5px rgba(0,0,0,0.25);
+    transition: all 0.3s ease-in-out;
+    margin-bottom: 5%;
+}
+#btn_budget {
+    margin-top: 5%;
+    display: inline-block;
+    padding: 10px 20px;
+    text-decoration: none;
+    text-align: center;
+    width:20%;
+    background-color: #0077cc;
+   
+    color: #fff;
+    border-radius: 5px;
+    box-shadow: 0px 2px 5px rgba(0,0,0,0.25);
+    transition: all 0.3s ease-in-out;
+    margin-bottom: 5%;
+
 }
 #menu a {
     
