add style to main buttons

--- a/templates/expenses_page.html
+++ b/templates/expenses_page.html
@@ -68,9 +68,8 @@
     
     {% if user.is_authenticated %}  
     <div id = "btn_budget_container">
-        <a id ="btn_budget" href="/budget/">Set your max budget for 2023</a>
-
-
+        <a  title="Add your 2023 budget, the total amount of your expenses will be subtracted from this budget" id ="btn_budget" href="/budget/">Set your max budget for 2023</a>
+       
     </div>
     
 
