--- a/static/css/style.css
+++ b/static/css/style.css
@@ -127,9 +127,34 @@ body {
     display:inline;  
    
 }
+#btn_add_container {
+    text-align: center;
 
+}
+
+#btn_budget_container {
+
+    text-align: center;
+}
+#btn_budget {
+    margin-top: 2%;
+    display: inline-block;
+    padding: 10px 20px;
+    text-decoration: none;
+    text-align: center;
+    width:20%;
+    background-color: #0077cc;
+   
+    color: #fff;
+    border-radius: 5px;
+    box-shadow: 0px 2px 5px rgba(0,0,0,0.25);
+    transition: all 0.3s ease-in-out;
+    margin-bottom: 5%;
+
+
+}
 #btn_add{
-    margin-top: 5%;
+    margin-top: 2%;
     display: inline-block;
     padding: 10px 20px;
     text-decoration: none;
@@ -143,8 +168,12 @@ body {
     transition: all 0.3s ease-in-out;
     margin-bottom: 5%;
 }
+#btn_budget_container {
+
+    text-align: center;
+}
 #btn_budget {
-    margin-top: 5%;
+    margin-top: 2%;
     display: inline-block;
     padding: 10px 20px;
     text-decoration: none;
@@ -242,7 +271,11 @@ body {
 
 }
 #image_container img {
+   
     width:80%;
+    border: 2px solid #0077cc;
+    border-radius: 60px; 
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3); 
 }
 .contact {
     background-color: #5ABCB9;
@@ -259,8 +292,8 @@ body {
 #total {
     height:100px;
     width: 30%;
-    color:red;
-    background-color: darkgray;
+    color:black;
+    background-color: ;
     text-align: center;
 
 
@@ -268,16 +301,16 @@ body {
 #budget {
     height: 100px;
     width: 30%;
-    color: rgb(4, 227, 4);
-    background-color: darkgray;
+    color: black;
+    background-color:;
     text-align: center;
 }
 
 #leftover {
     height: 100px;
     width: 30%;
-    color: plum;
-    background-color: darkgray;
+    color: black;
+    background-color:;
     text-align: center;
 
 }
@@ -357,6 +390,7 @@ body {
 }
 .type{
     overflow: hidden;
+    
    
     white-space: nowrap;
     font-size: 1.6rem;
