--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -48,7 +48,7 @@
             </ul>    
         </div>
         <div id ="image_container">
-            <img src = "/static/css/money.jpg" alt="money">
+            <img src = "/static/css/money1.jpeg" alt="money">
 
         </div>
     </div>
