--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,24 +12,23 @@ body {
 
 }
 .container {
-
     text-align: center;
+    justify-content: center;
     display: flex;
     flex-wrap: wrap;
-    
-   
+    margin: 5%;
+    margin-top: 0px;
+    border:solid 4px black;
 }
 
 #expense_div {
-    text-align: center;
-    justify-content: space-between;
-    
+    justify-content: space-evenly;
+    width:15%;
+    margin: 2%;
     background-color: aquamarine;
-    width: 16%;
     height: 100%;
     background-color: #ccc;
-    margin: 5px;
-   
+    border: solid 1px #0077cc;
     border-radius: 25px;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
     
@@ -68,24 +67,32 @@ body {
     
 }
 .placeholder_container {
+
     text-align: center;
+    justify-content: center;
     display: flex;
     flex-wrap: wrap;
+    margin: 5%;
+    margin-top:0px;
+    border:solid 4px black;
 
+    
 
 }
 
 .placeholder_expense {
-    text-align: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    width:15%;
+    margin: 2%;
     background-color: aquamarine;
-    width: 16%;
-    height: 200px;
+    height: 150px;
     background-color: #ccc;
-    margin: 5px;
+    border: solid 1px #0077cc;
     border-radius: 25px;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
-    
+
+
+   
 
 }
 .placeholder_expense:hover {
@@ -143,7 +150,7 @@ body {
     text-decoration: none;
     text-align: center;
     width:20%;
-    background-color: #0077cc;
+    background-color: blue;
    
     color: #fff;
     border-radius: 5px;
@@ -160,7 +167,7 @@ body {
     text-decoration: none;
     text-align: center;
     width:20%;
-    background-color: #0077cc;
+    background-color: #33b249;
    
     color: #fff;
     border-radius: 5px;
@@ -168,6 +175,11 @@ body {
     transition: all 0.3s ease-in-out;
     margin-bottom: 5%;
 }
+#btn_add:hover{
+    box-shadow: 0 3px 10px purple;
+
+}
+
 #btn_budget_container {
 
     text-align: center;
@@ -187,6 +199,9 @@ body {
     transition: all 0.3s ease-in-out;
     margin-bottom: 5%;
 
+}
+#btn_budget:hover {
+    box-shadow: 0 3px 10px purple;
 }
 #menu a {
     
@@ -324,8 +339,8 @@ body {
 #placeholder_total {
     height:100px;
     width: 30%;
-    color:red;
-    background-color: darkgray;
+    color:black;
+    background-color: ;
     text-align: center;
 
 
@@ -333,16 +348,16 @@ body {
 #placeholder_budget {
     height: 100px;
     width: 30%;
-    color: rgb(4, 227, 4);
-    background-color: darkgray;
+    color: black;
+    background-color: ;
     text-align: center;
 }
 
 #placeholder_leftover {
     height: 100px;
     width: 30%;
-    color: yellow;
-    background-color: darkgray;
+    color: black;
+    background-color:;
     text-align: center;
 
 }
