--- a/static/css/style.css
+++ b/static/css/style.css
@@ -142,25 +142,10 @@ body {
 #btn_budget_container {
 
     text-align: center;
+    
 }
-#btn_budget {
-    margin-top: 2%;
-    display: inline-block;
-    padding: 10px 20px;
-    text-decoration: none;
-    text-align: center;
-    width:20%;
-    background-color: blue;
-   
-    color: #fff;
-    border-radius: 5px;
-    box-shadow: 0px 2px 5px rgba(0,0,0,0.25);
-    transition: all 0.3s ease-in-out;
-    margin-bottom: 5%;
 
-
-}
-#btn_add{
+.btn_add{
     margin-top: 2%;
     display: inline-block;
     padding: 10px 20px;
@@ -175,7 +160,7 @@ body {
     transition: all 0.3s ease-in-out;
     margin-bottom: 5%;
 }
-#btn_add:hover{
+.btn_add:hover{
     box-shadow: 0 3px 10px purple;
 
 }
