--- a/templates/expenses_page.html
+++ b/templates/expenses_page.html
@@ -43,7 +43,7 @@
     {% if not user.is_authenticated %}  
 
     <div id = "btn_budget_container">
-        <a  title="Add your 2023 budget, the total amount of your expenses will be subtracted from this budget" id ="btn_budget" href="/budget/">Set your max budget for 2023</a>
+        <a  title="Add your 2023 budget, the total amount of your expenses will be subtracted from this budget" class ="btn_budget" href="/budget/">Set your max budget for 2023</a>
        
     </div>
     
@@ -74,7 +74,7 @@
     
     {% if user.is_authenticated %}  
     <div id = "btn_budget_container">
-        <a  title="Add your 2023 budget, the total amount of your expenses will be subtracted from this budget" id ="btn_budget" href="/budget/">Set your max budget for 2023</a>
+        <a  title="Add your 2023 budget, the total amount of your expenses will be subtracted from this budget" class ="btn_add" href="/budget/">Set your max budget for 2023</a>
        
     </div>
     
@@ -107,7 +107,7 @@
 
     {% if not user.is_authenticated %} 
     <div id = "btn_add_container">
-        <a id = "btn_add" href="/add/">Add a new expense</a>
+        <a class = "btn_add" href="/add/">Add a new expense</a>
         
     </div>
 
@@ -128,7 +128,7 @@
     {% endif %}
     {% if user.is_authenticated %}   
     <div id = "btn_add_container">
-        <a id = "btn_add" href="/add/">Add a new expense</a>
+        <a class = "btn_add" href="/add/">Add a new expense</a>
         
     </div>
 
