--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,7 +8,7 @@
 
 body {
     font-family: 'Open Sans', Arial, sans-serif;
-    background-color: whitesmoke;
+    background-color: #ccc;
 
 }
 .container {
@@ -27,7 +27,7 @@ body {
     margin: 2%;
     background-color: aquamarine;
     height: 100%;
-    background-color: #ccc;
+    background-color: #9c88ff;
     border: solid 1px #0077cc;
     border-radius: 25px;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
@@ -108,15 +108,19 @@ body {
 }
 
 #home {
-   
     
-   
-}
-#home h1 { 
-    font-size: 35px
     
+    
+    background-color: #9c88ff;
+    border-bottom-left-radius: 150px;
+    border-bottom-right-radius: 150px; 
+    margin-bottom: 20px;
 }
+
 #main {  
+ 
+    text-align: center;
+  
     letter-spacing: 4px;
     text-align: center;
     font-size: 35px;
@@ -124,6 +128,8 @@ body {
     
 }
 #menu  {
+    
+
     text-align: center;
     padding-top:20px; 
     list-style:circle;
@@ -134,19 +140,24 @@ body {
     display:inline;  
    
 }
-#btn_add_container {
+.btn_add_container {
     text-align: center;
+    display: flex;
 
 }
 
-#btn_budget_container {
+.btn_budget_container {
+    
+    flex: 3; 
+  
 
     text-align: center;
+    
     
 }
 
 .btn_add{
-    margin-top: 2%;
+   
     display: inline-block;
     padding: 10px 20px;
     text-decoration: none;
@@ -158,7 +169,7 @@ body {
     border-radius: 5px;
     box-shadow: 0px 2px 5px rgba(0,0,0,0.25);
     transition: all 0.3s ease-in-out;
-    margin-bottom: 5%;
+    
 }
 .btn_add:hover{
     box-shadow: 0 3px 10px purple;
@@ -291,7 +302,7 @@ body {
 }
 #total {
     height:100px;
-    width: 30%;
+    flex:1.5;
     color:black;
     background-color: ;
     text-align: center;
@@ -300,7 +311,7 @@ body {
 }
 #budget {
     height: 100px;
-    width: 30%;
+    flex:1.5;
     color: black;
     background-color:;
     text-align: center;
@@ -308,7 +319,7 @@ body {
 
 #leftover {
     height: 100px;
-    width: 30%;
+    flex:1.5;
     color: black;
     background-color:;
     text-align: center;
@@ -323,7 +334,7 @@ body {
 }
 #placeholder_total {
     height:100px;
-    width: 30%;
+    flex:1.5;
     color:black;
     background-color: ;
     text-align: center;
@@ -332,7 +343,7 @@ body {
 }
 #placeholder_budget {
     height: 100px;
-    width: 30%;
+    flex:1.5;
     color: black;
     background-color: ;
     text-align: center;
@@ -340,7 +351,7 @@ body {
 
 #placeholder_leftover {
     height: 100px;
-    width: 30%;
+    flex:1.5;
     color: black;
     background-color:;
     text-align: center;
@@ -358,6 +369,12 @@ body {
     border: solid 1px black;
 
 }
+.sm_container {
+    background-color: #9c88ff;
+   
+    
+}
+
 .social_media {
     text-align: center;
 }
