--- a/templates/expenses_page.html
+++ b/templates/expenses_page.html
@@ -11,7 +11,8 @@
     <div id = "type">
     
     </div>
-    <header id = "home">
+    <header >
+        <div id="home">
 
         <h1 id = "main">Expense Tracker</h1>
         <nav>
@@ -29,6 +30,7 @@
                 {% endif %}
             </ul>   
         </nav>
+        <div>
     </header>
     
     
@@ -42,14 +44,16 @@
     {% endif %}
     {% if not user.is_authenticated %}  
 
-    <div id = "btn_budget_container">
-        <a  title="Add your 2023 budget, the total amount of your expenses will be subtracted from this budget" class ="btn_budget" href="/budget/">Set your max budget for 2023</a>
+   
+   
+    <div id = "placeholder_money_container">
+        
+    <div class= "btn_budget_container">
+        <a  title="Add your 2023 budget, the total amount of your expenses will be subtracted from this budget" class ="btn_add" href="/budget/">Set your max budget for 2023</a>
        
     </div>
     
-   
 
-    <div id = "placeholder_money_container">
         <div class="typewiter" id= "placeholder_budget">
             <h1 >Initial Budget</h1>
             <h2 class="type" > $  </h2>
@@ -73,13 +77,15 @@
   
     
     {% if user.is_authenticated %}  
-    <div id = "btn_budget_container">
-        <a  title="Add your 2023 budget, the total amount of your expenses will be subtracted from this budget" class ="btn_add" href="/budget/">Set your max budget for 2023</a>
-       
-    </div>
-    
+   
 
     <div id = "money_container">
+        <div class= "btn_budget_container">
+            <a  title="Add your 2023 budget, the total amount of your expenses will be subtracted from this budget" class ="btn_add" href="/budget/">Set your max budget for 2023</a>
+           
+        </div>
+        
+    
         <div class="typewiter"  id= "budget">
             <h1 >Initial Budget</h1>
             <h2 class="type" > $  {{budget_total}} </h2>
@@ -106,7 +112,7 @@
     
 
     {% if not user.is_authenticated %} 
-    <div id = "btn_add_container">
+    <div class= "btn_add_container">
         <a class = "btn_add" href="/add/">Add a new expense</a>
         
     </div>
@@ -127,7 +133,7 @@
        </div>
     {% endif %}
     {% if user.is_authenticated %}   
-    <div id = "btn_add_container">
+    <div class = "btn_add_container">
         <a class = "btn_add" href="/add/">Add a new expense</a>
         
     </div>
@@ -156,6 +162,7 @@
    </div>
   
     <footer>
+        <div class = "sm_container">
         <ul class="social_media">
             <li>
                 <a href="https://facebook.com" target="_blank" rel="noopener"><i class="fab fa-facebook"></i></a>
@@ -170,6 +177,7 @@
                 <a href="https://instagram.com" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
             </li>
         </ul>
+        </div>
     </footer>
     <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
     <script src = "/static/main.js"></script>
