--- a/templates/expenses_page.html
+++ b/templates/expenses_page.html
@@ -42,80 +42,59 @@
         {% endfor %}
        </ul>
     {% endif %}
-    {% if not user.is_authenticated %}  
-
-   
-   
-    <div id = "placeholder_money_container">
-        
-    <div class= "btn_budget_container">
-        <a  title="Add your 2023 budget, the total amount of your expenses will be subtracted from this budget" class ="btn_add" href="/budget/">Set your max budget for 2023</a>
-       
-    </div>
-    
-
-        <div class="typewiter" id= "placeholder_budget">
-            <h1 >Initial Budget</h1>
-            <h2 class="type" > $  </h2>
-
+    {% if user.is_authenticated %}  
+    <div class="main_buttons_container">
+        <div class= "btn_add_container">
+            <a class = "btn_add" href="/add/">Add a new expense</a>
+        </div>   
+        <div class= "btn_budget_container">
+            <a  title="Add your 2023 budget, the total amount of your expenses will be subtracted from this budget" class ="btn_add" href="/budget/">Set your max budget for 2023</a>
         </div>
-       
+        <div class="typewiter"  id= "budget">
+            <h2 >Initial Budget</h2>
+            <h3 class="type" > $  {{budget_total}} </h3>
+        </div>
+        <div class="typewiter"  id= "total">
+            <h2>Total Expenses</h2>
+            <h3 class="type" > $ {{total}}</h3>
+        </div>
+        <div class="typewiter" id= "leftover">
+            <h2>Current Budget</h2>
+            <h2 class="type" > $ {{leftover}}</h2>
+        </div>
+    </div>
+    {% endif %}
+    {% if not user.is_authenticated %}  
+    <div class = "main_buttons_container">
+            
+        <div class= "btn_add_container">
+            <a class = "btn_add" href="/add/">Add a new expense</a>
+        </div>   
+        <div class= "btn_budget_container">
+            <a  title="Add your 2023 budget, the total amount of your expenses will be subtracted from this budget" class ="btn_add" href="/budget/">Set your max budget for 2023</a>
+        </div>
+        <div class="typewiter" id= "placeholder_budget">
+            <h2 >Initial Budget</h2>
+            <h3 class="type" > $  </h3>
+        </div>
         <div class="typewiter" id= "placeholder_total">
-            <h1>Total Expenses</h1>
-            <h2 class="type" > $ </h2>
-
+            <h2>Total Expenses</h2>
+            <h3 class="type" > $ </h3>
         </div>
         <div class="typewiter"  id= "placeholder_leftover">
-            <h1>Current Budget</h1>
-            <h2 class="type" > $ </h2>
-
+            <h2>Current Budget</h2>
+            <h3 class="type" > $ </h3>
         </div>
-
     </div>
     {% endif %}
 
   
-    
-    {% if user.is_authenticated %}  
-   
-
-    <div id = "money_container">
-        <div class= "btn_budget_container">
-            <a  title="Add your 2023 budget, the total amount of your expenses will be subtracted from this budget" class ="btn_add" href="/budget/">Set your max budget for 2023</a>
-           
-        </div>
-        
-    
-        <div class="typewiter"  id= "budget">
-            <h1 >Initial Budget</h1>
-            <h2 class="type" > $  {{budget_total}} </h2>
-
-        </div>
-       
-        <div class="typewiter"  id= "total">
-            <h1>Total Expenses</h1>
-            <h2 class="type" > $ {{total}}</h2>
-
-        </div>
-        <div class="typewiter" id= "leftover">
-            <h1>Current Budget</h1>
-            <h2 class="type" > $ {{leftover}}</h2>
-           
-            
-
-        </div>
-
-    </div>
-    {% endif %}
 
     
     
 
     {% if not user.is_authenticated %} 
-    <div class= "btn_add_container">
-        <a class = "btn_add" href="/add/">Add a new expense</a>
-        
-    </div>
+   
 
         <div class = "placeholder_container">
             <div class= "placeholder_expense"></div>
@@ -133,10 +112,7 @@
        </div>
     {% endif %}
     {% if user.is_authenticated %}   
-    <div class = "btn_add_container">
-        <a class = "btn_add" href="/add/">Add a new expense</a>
-        
-    </div>
+   
 
 
     <div   class = "container">
