--- a/static/css/style.css
+++ b/static/css/style.css
@@ -205,14 +205,20 @@ body {
 }
 .add_form_container {
     display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 .add_form {
-    
+    padding: 5%;
     display: flex;
-  
     flex-direction: column;
     align-items: center;
     border: solid 1px black;
+}
+.btn_submit {
+ 
+
 }
 
 #about_container {
@@ -364,6 +370,7 @@ body {
 }
 .sm_container {
     background-color: #9c88ff;
+  
    
     
 }
@@ -379,7 +386,7 @@ body {
 .social_media i {
     font-size: 200%;
     margin: 1%;
-    padding: 5%;
+
     color:black;
 }
 
